clean simple pom.xml